@@ -25,6 +25,8 @@ public class Constants {
 	public static String USAGE_OPEN_URL_EMPTY_ARTICLE = "UsageOpenUrlEmptyArticlePreference";
 	public static String USAGE_UPDATE_UNREAD_ON_STARTUP = "UsageUpdateArticlesOnStartupPreference";
 	public static String USAGE_REFRESH_SUB_DATA = "UsageRefreshSubDataPreference";
+	public static String USAGE_USE_VOLUME_KEYS = "UsageUseVolumeKeysPreference";
+	public static String USAGE_VIBRATE_ON_LAST_ARTICLE = "UsageVibrateOnLastArticlePreference";
 	
 	public static String DISPLAY_SHOW_VIRTUAL = "DisplayShowVirtualPreference";
 	public static String DISPLAY_SHOW_VIRTUAL_UNREAD = "DisplayShowVirtualUnreadPreference";
@@ -32,5 +34,4 @@ public class Constants {
 	public static String DISPLAY_USE_SWIPE = "DisplayUseSwipePreference";
 	public static String DISPLAY_ONLY_UNREAD = "DisplayShowUnreadOnlyPreference";
 	public static String DISPLAY_ARTICLE_LIMIT = "DisplayArticleLimitPreference";
-
 }
